Day 2 part 1 finished

--- a/AdventOfCodeRunner/AdventOfCodeRunner.csproj
+++ b/AdventOfCodeRunner/AdventOfCodeRunner.csproj
@@ -15,6 +15,9 @@
     <None Update="PuzzleInputs\Day1.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="PuzzleInputs\Day2.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
